# Twelia

./: .gitignore  .prettierignore  README.md  SECURITY.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.cargo/: config.toml
assets/branding/: twelia-icon-manifest.json
docs/: android.md  diagnostics.md  game-distribution-research.md  mods.md  session-isolation.md
scripts/: mods.mjs  tauri.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/drawable/: ic_launcher_foreground_safe.xml
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: error.rs  game_server.rs  lib.rs  main.rs  redaction.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/diagnostics/: mod.rs
src-tauri/src/distribution/: installer.rs  mod.rs
src-tauri/src/mods/: catalog.rs  commands.rs  data.rs  game.rs  http.rs  logs.rs  manifest.rs  mod.rs  platform.rs  runtime.rs  secrets.rs  settings.rs  supervisor.rs  ui.rs
src-tauri/src/secure_storage/: mod.rs
src-tauri/src/sessions/: game_event_bridge.js  mod.rs
src-tauri/src/storage/: mod.rs
src/accounts/: accountService.test.ts  accountService.ts  accountStore.test.ts  accountStore.ts  accountTypes.ts
src/accounts/components/: AccountCard.tsx  AccountForm.tsx
src/app/: App.tsx  DesktopTitleBar.tsx  ErrorBoundary.tsx  router.ts  startup.ts
src/commands/: CommandPalette.tsx  commandStore.ts  search.test.ts  search.ts
src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button-variants.ts  button.tsx  card.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  progress.tsx  select.tsx  separator.tsx  slider.tsx  tabs.tsx  (+2 more)
src/core/: errors.ts  id.ts
src/diagnostics/: diagnosticLogger.ts  diagnosticTypes.ts  redaction.test.ts  redaction.ts
src/game/: GameRuntime.test.ts  GameRuntime.ts  GameSessionManager.test.ts  GameSessionManager.ts  GameTab.tsx  clientService.ts  gameAttention.test.ts  gameAttention.ts  gameConnection.test.ts  gameConnection.ts  gameTypes.ts  handleGameAttention.ts  mobileGameBridge.test.ts  mobileGameBridge.ts  mobileGameLayout.test.ts  mobileGameLayout.ts
src/home/: HomeTab.tsx
src/i18n/: i18n.test.ts  i18n.ts  messages.ts
src/mods/: ModCommandShortcuts.tsx  ModLogDock.tsx  ModSettingsForm.tsx  ModUiPanelView.test.tsx  ModUiPanelView.tsx  ModsManager.tsx  ModsPage.tsx  modService.ts  modStore.ts  modTypes.ts
src/notifications/: gameAttentionNotification.tsx
src/platform/: platform.ts
src/settings/: SettingsTab.tsx  settingsCatalog.ts  settingsStore.test.ts  settingsStore.ts
src/shortcuts/: ShortcutProvider.tsx  shortcutRegistry.test.ts  shortcutRegistry.ts  shortcutStore.ts  shortcutTypes.ts
src/storage/: storageGateway.test.ts  storageGateway.ts
src/styles/: global.css
src/tabs/: MobileTabMenu.tsx  TabBar.tsx  TabContent.tsx  tabPersistence.ts  tabStore.test.ts  tabStore.ts  tabTypes.ts
src/test/: setup.ts
