[package]
name = "twelia"
version = "1.0.0"
description = "Espace de travail multi-session indépendant pour DOFUS Touch"
authors = ["Twelia contributors"]
license = "GPL-3.0-or-later"
edition = "2024"
rust-version = "1.88"

[lib]
name = "twelia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
hex = "0.4.3"
log = "0.4.29"
mime_guess = "2.0.5"
regex = "1.11.3"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sysinfo = "0.38.3"
tauri = { version = "2.11.5", features = ["unstable"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-log = "2.8.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-os = "2.3.2"
thiserror = "2.0.18"
tiny_http = "0.12.0"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
walkdir = "2.5.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
keyring = { version = "3.6.3" }

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "1.0.0"
keyring-core = "1.0.0"

[dev-dependencies]
tempfile = "3.25.0"
